static/css/main.css
body {
  padding-top: 70px;
  background-color: #202325;
}

.container {
  display : none;
}

#navbar-collapsed ul {
  display : none;
}

.form-control[disabled] {
  cursor: default;
}

.graphContainer {
  width: 100%;
}

#chartsPage {
  width: 100%;
  position: absolute;
  top: 60px;
  left: 0;
  right: 0;
  bottom: 0;
  overflow-x: auto;
  overflow-y: hidden;
}

#gridList {
  position: relative;
  height: 100%;
  list-style: none;
}

#gridList li {
  overflow: hidden;
  position: absolute;
  -moz-transition: top 0.2s,
                   left 0.2s;
  -webkit-transition: top 0.2s,
                      left 0.2s;
}

#gridList li.ui-draggable-dragging {
  -moz-transition: none;
  -webkit-transition: none;
}

.gridItemHeader {
  -webkit-user-select: none;
  height: 10%;
  padding: .25%;
  display: block;
  background-color: #353A40;
  text-align: center;
  cursor: pointer;
}

.gridItemContent {
  height: 88.5%;
  padding: .5%;
  background-color: #292C2F;
}

.position-highlight {
  background-color: #1d1f21;
}

.gridItemOverlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba( 0 , 0 , 0 , 0.5 );
}

.gridItemOverlayContent {
  position: relative;
  top: 35%;
  width: 50%;
  margin: 0 auto 0 auto;
  text-align: center;
  color: #FFF;
}

